[tool.poetry]
name = "moz-library"
version = "0.1.1"
description = "mozkzki's book library library."
authors = ["mozkzki <mozkzki@gmail.com>"]
maintainers = ["mozkzki <mozkzki@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/mozkzki/moz-library"
repository = "https://github.com/mozkzki/moz-library"
documentation = "https://github.com/mozkzki/moz-library/wiki"
keywords = ['library', 'python']
classifiers=[
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: MIT License',
    'Topic :: Software Development :: Libraries',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]

[tool.poetry.dependencies]
python = "^3.7"
python-dotenv = "0.21.0"
python-dateutil = "2.8.1"
selenium = "4.7.2"
beautifulsoup4 = "4.11.1"
jinja2 = "3.1.2"

[tool.poetry.dev-dependencies]
flake8 = "5.0.4"
mypy = "0.991"
pytest = "7.2.0"
black = "22.12.0"
pytest-cov = "4.0.0"
coverage = "7.0.4"
isort = "5.11.4"
Sphinx = "4.3.2"
sphinx-rtd-theme = "1.1.1"
pytest-env = "0.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
